# neural-network-from-scratch

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
crates/datasets/: Cargo.toml
crates/datasets/src/: lib.rs
crates/linalg_scratch/: Cargo.toml
crates/linalg_scratch/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/nn-cli/: Cargo.toml
crates/nn-cli/src/: main.rs
crates/nn-core/: Cargo.toml
crates/nn-core-library/: Cargo.toml
crates/nn-core-library/src/: activation.rs  gpu.rs  layer.rs  lib.rs  network.rs  optimizer.rs
crates/nn-core-optimized/: Cargo.toml
crates/nn-core-optimized/src/: activation.rs  layer.rs  lib.rs  matrix.rs  network.rs  profiling.rs
crates/nn-core/src/: activation.rs  layer.rs  lib.rs  matrix.rs  network.rs  profiling.rs
crates/nn-core/tests/: integration_tests.rs
crates/nn_scratch/: Cargo.toml
crates/nn_scratch/src/: lib.rs
crates/web-interface/: Cargo.toml
crates/web-interface/src/: api.rs  lib.rs  main.rs  models.rs
crates/web-interface/static/: app.js  index.html  style.css
crates/web-interface/tests/: api_tests.rs  integration_tests.rs
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/docs/: api.md  approach.md  architecture.md  cli.md  contributing.md  core-implementation.md  examples.md  implementation-details.md  intro.md  math-foundations.md  nn-core-library.md  project-overview.md  usage-guide.md
research/: RUST_ML_CAPABILITIES.md
tests/: integration_tests.rs
tests/web_interface/: api_tests.rs  integration_tests.rs
