[workspace]
members = [
	"crates/nn-core",
	"crates/nn-core-library",
	"crates/nn-cli",
	"crates/web-interface",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = "0.7"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
meval = "0.2"
once_cell = "1.20"
plotters = "0.3.5"
rand = { version = "0.8.5", features = ["std", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower = "0.5.2"
http-body-util = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
