[package]
name = "nn-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
profiling = ["nn-core/profiling"]

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
plotters = { workspace = true }
nn-core = { path = "../nn-core" }
nn-core-library = { path = "../nn-core-library" }
