[package]
name = "nn-core-library"
version = "0.1.0"
edition = "2021"
description = "Neural network core built on battle-tested ecosystem crates"

[features]
default = []
blas = ["ndarray/blas"]
profiling = []

[dependencies]
ndarray = "0.15"
once_cell = { workspace = true }
rand = { workspace = true }
rand_distr = "0.4"
