[package]
name = "nn-core-optimized"
version = "0.1.0"
edition = "2021"
description = "Highly optimized neural network core primitives"

[features]
default = []
parallel = ["rayon"]
profiling = []

[dependencies]
once_cell = { workspace = true }
rand = { workspace = true }
rayon = { version = "1.10", optional = true }
