[package]
name = "web-interface"
version = "0.1.0"
edition = "2021"

[features]
default = []
blas = ["nn-core-library/blas"]
gpu = ["nn-core-library/gpu"]
parallel = ["nn-core-library/parallel"]

[dependencies]
axum = { workspace = true }
meval = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
nn-core = { path = "../nn-core" }
nn-core-library = { path = "../nn-core-library" }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
